--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>TWICE</title>
-        <link rel="stylesheet" href="https://tonchi36.github.io/kakaka/stylesheet.css">
+        <link rel="stylesheet" href="https://tonchi36.github.io/kakakaka/stylesheet.css">
     </head>
     <body>
         <h1>TWICE</h1>
